--- a/backend/nixpacks.toml
+++ b/backend/nixpacks.toml
@@ -5,7 +5,7 @@ nixPkgs = ["nodejs-18_x"]
 cmds = ["npm install"]
 
 [phases.build]
-cmds = ["npx prisma generate", "npx prisma db push", "npx tsx prisma/seed.ts", "npm run build"]
+cmds = ["npm run build"]
 
 [start]
 cmd = "npm start"
