--- a/render.yaml
+++ b/render.yaml
@@ -3,7 +3,7 @@ services:
     name: tarot-backend
     runtime: node
     rootDir: backend
-    buildCommand: ./build.sh
+    buildCommand: npm install && npx prisma generate && npx prisma db push --skip-generate && npm run build
     startCommand: npm start
     envVars:
       - key: DATABASE_URL
