--- a/render.yaml
+++ b/render.yaml
@@ -14,3 +14,7 @@ services:
         value: production
       - key: PORT
         value: 10000
+      - key: OPENAI_API_KEY
+        sync: false
+      - key: CORS_ORIGIN
+        sync: false
