--- a/backend/package.json
+++ b/backend/package.json
@@ -23,20 +23,20 @@
     "express": "^4.18.2",
     "express-async-errors": "^3.1.1",
     "joi": "^17.11.0",
-    "openai": "^5.10.1"
-  },
-  "devDependencies": {
+    "openai": "^5.10.1",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
-    "@types/jest": "^29.5.11",
     "@types/node": "^20.10.5",
+    "typescript": "^5.3.3"
+  },
+  "devDependencies": {
+    "@types/jest": "^29.5.11",
     "@typescript-eslint/eslint-plugin": "^6.15.0",
     "@typescript-eslint/parser": "^6.15.0",
     "eslint": "^8.56.0",
     "jest": "^29.7.0",
     "prisma": "^5.7.0",
     "ts-jest": "^29.1.1",
-    "tsx": "^4.7.0",
-    "typescript": "^5.3.3"
+    "tsx": "^4.7.0"
   }
 }
